--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header p {
 
 /* BODY */
 body {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #333;
     background-color: #fff;
     line-height: 1.6;
