--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ body {
 
 .proyectos-grid {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 1.5rem;
 }
