--- a/style.css
+++ b/style.css
@@ -61,8 +61,9 @@ body {
 
 .proyectos-grid {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: col;
     gap: 1.5rem;
 }
 
