--- a/css/contacto.css
+++ b/css/contacto.css
@@ -26,6 +26,10 @@ header h2 {
     font-size: 30px;
     margin-left: 50px;
 }
+header a {
+    text-decoration: none;
+    color: black;
+}
 
 nav ul {
     list-style: none;
@@ -52,7 +56,6 @@ nav ul li a {
     padding: 5px;
     margin-top: -10px;
 }
-
 #modo_oscuro:hover {
     background-color: black;
 }
@@ -63,7 +66,7 @@ nav ul li a {
     padding: 20px;
     border-radius: 25px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 600px; 
+    width: 800px; 
     margin: 20px auto; 
 }
 main h2 {
@@ -111,12 +114,13 @@ button:hover {
     background-color: #333333;
     color: white;
 }
-
 .dark-mode nav ul li a,
 .dark-mode #email p {
     color: white;
 }
-
+.dark-mode header a {
+    color: white;
+}
 .dark-mode #modo_oscuro:hover {
     background-color: white;
 }
