--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,10 @@ header h2 {
     font-size: 30px;
     margin-left: 50px;
 }
+header a {
+    text-decoration: none;
+    color: black;
+}
 
 nav ul {
     list-style: none;
@@ -41,6 +45,7 @@ nav ul li a {
     color: black;
     font-size: 18px;
 }
+
 #modo_oscuro {
     background-color: transparent;
     font-size: 15px;
@@ -49,6 +54,9 @@ nav ul li a {
     cursor: pointer;
     font-weight: bold;
     padding: 5px;
+}
+#modo_oscuro:hover {
+    background-color: black;
 }
 
 /* MAIN */
@@ -59,8 +67,8 @@ nav ul li a {
     margin-top: 100px;
 }
 #foto_perfil {
-    width: 350px;
-    height: 350px;
+    width: 500px;
+    height: 500px;
     border-radius: 50%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
@@ -138,6 +146,9 @@ nav ul li a {
 .dark-mode nav ul li a,
 .dark-mode #perfil h1,
 .dark-mode #perfil p {
+    color: white;
+}
+.dark-mode header a {
     color: white;
 }
 .dark-mode #modo_oscuro:hover {
