--- a/css/contacto.css
+++ b/css/contacto.css
@@ -180,6 +180,7 @@ button:hover {
     header {
         flex-direction: column; 
         align-items: center;
+        margin-bottom: -20px;
     }
     header h2 {
         margin-left: 0;
