--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,6 @@ body {
     text-align: center;
     color: black;
     transition: background-color 0.5s ease, color 0.5s ease;
-    overflow: hidden;
 }
 
 /* HEADER */
@@ -238,6 +237,7 @@ button:active {
     header {
         flex-direction: column; 
         align-items: center;
+        margin-bottom: -50px;
     }
     header h2 {
         margin-left: 0;
